--- a/test/hello-world-app/src/pages/sub1/sub1.component.html
+++ b/test/hello-world-app/src/pages/sub1/sub1.component.html
@@ -11,3 +11,5 @@
 <p>{{ randomValue }}</p>
 <button (tap)="eventTest($event)">测试异步</button>
 <p>{{ randomValue }}</p>
+{{ jsonObj | json }}
+{{ today | date: 'yyyy-MM-dd' }}
