--- a/test/hello-world-app/src/pages/sub1/sub1.component.html
+++ b/test/hello-world-app/src/pages/sub1/sub1.component.html
@@ -6,6 +6,7 @@
 <div *ngIf="num; else test">显示的内容</div>
 <div *ngIf="display; else test" class="test">显示的内容</div>
 <ng-template #test> 不显示的模板 </ng-template>
+<ng-template #test2> 测试是不是多一个LContainer </ng-template>
 <button (tap)="changeTest($event)"></button>
 <p>待变化</p>
 <p>{{ randomValue }}</p>
@@ -13,3 +14,18 @@
 <p>{{ randomValue }}</p>
 {{ jsonObj | json }}
 {{ today | date: 'yyyy-MM-dd' }}
+<div *ngIf="true">
+  指令层测试---
+  <app-cp1></app-cp1>
+  ---指令层测试
+</div>
+<div *ngIf="true">
+  多指令层测试---
+  <div *ngIf="true">
+    <app-cp1></app-cp1>
+  </div>
+  ---多指令层测试
+</div>
+<div *ngFor="let item of [1, 2]">
+  <app-cp1></app-cp1>
+</div>
