--- a/test/hello-world-app/src/pages/sub1/sub1.component.html
+++ b/test/hello-world-app/src/pages/sub1/sub1.component.html
@@ -14,6 +14,7 @@
 <p>{{ randomValue }}</p>
 {{ jsonObj | json }}
 {{ today | date: 'yyyy-MM-dd' }}
+<div *ngIf="true">{{ '测试' }}</div>
 <div *ngIf="true">
   指令层测试---
   <app-cp1></app-cp1>
