--- a/test/hello-world-app/src/pages/sub1/sub1.component.html
+++ b/test/hello-world-app/src/pages/sub1/sub1.component.html
@@ -1,5 +1,10 @@
 <lib-test-library></lib-test-library>
-<div [class]="'sdfsdf'" [class.abc]="false" [style.color]="'red'">
+<div
+  [class]="'sdfsdf'"
+  [class.abc]="false"
+  [style.color]="'red'"
+  libTestLibrary
+>
   615156156516
 </div>
 <p class="myclass">hello test</p>
