chore: library 相关

--- a/test/hello-world-app/src/pages/sub1/sub1.component.html
+++ b/test/hello-world-app/src/pages/sub1/sub1.component.html
@@ -1,5 +1,5 @@
 <lib-test-library></lib-test-library>
-<div
+<!-- <div
   [class]="'sdfsdf'"
   [class.abc]="false"
   [style.color]="'red'"
@@ -39,4 +39,4 @@
 </div>
 <div *ngIf="true">
   <div appF1>sdfsdfsfdfgsgsgf</div>
-</div>
+</div> -->
