fix: 多级组件展示异常

--- a/test/hello-world-app/src/pages/sub1/sub1.component.html
+++ b/test/hello-world-app/src/pages/sub1/sub1.component.html
@@ -1,5 +1,5 @@
-<lib-test-library></lib-test-library>
-<!-- <div
+<lib-test-library *ngIf="display"></lib-test-library>
+<div
   [class]="'sdfsdf'"
   [class.abc]="false"
   [style.color]="'red'"
@@ -37,6 +37,6 @@
 <div *ngFor="let item of [1, 2]">
   <app-cp1></app-cp1>
 </div>
-<div *ngIf="true">
+<!-- <div *ngIf="true">
   <div appF1>sdfsdfsfdfgsgsgf</div>
 </div> -->
