--- a/test/hello-world-app/src/pages/sub1/sub1.component.html
+++ b/test/hello-world-app/src/pages/sub1/sub1.component.html
@@ -1,3 +1,4 @@
+<input type="text" libTestLibrary />
 <lib-test-library *ngIf="display"></lib-test-library>
 <div
   [class]="'sdfsdf'"
@@ -37,6 +38,6 @@
 <div *ngFor="let item of [1, 2]">
   <app-cp1></app-cp1>
 </div>
-<!-- <div *ngIf="true">
+<div *ngIf="true">
   <div appF1>sdfsdfsfdfgsgsgf</div>
-</div> -->
+</div>
