fix: forms双向绑定未更新视图

--- a/test/hello-world-app/src/__pages/root/root.component.html
+++ b/test/hello-world-app/src/__pages/root/root.component.html
@@ -6,3 +6,4 @@
 <button (tap)="customStructuralDirective()">自定义结构型指令</button>
 <button (tap)="complexStructure()">复杂结构</button>
 <button (tap)="complexPropertyEvent()">复杂属性与事件</button>
+<button (tap)="baseForms()">基础表单</button>
