--- a/test/hello-world-app/src/__pages/ng-content/ng-content.component.html
+++ b/test/hello-world-app/src/__pages/ng-content/ng-content.component.html
@@ -1,1 +1,5 @@
 <app-content> 这个是投影内容 </app-content>
+<app-content-multi>
+  <div slot="slot1">插槽1内容</div>
+  <div slot="slot2">插槽2内容</div>
+</app-content-multi>
