--- a/test/hello-world-app/src/__pages/default-structural-directive/default-structural-directive.component.html
+++ b/test/hello-world-app/src/__pages/default-structural-directive/default-structural-directive.component.html
@@ -11,14 +11,14 @@
 <ng-template #ngIfElseTemplate>
   <div>else时显示</div>
 </ng-template>
-<p>非语法糖ngIf显示测试(非语法糖时单独模板情况下未生成锚点,失败)</p>
-<!-- <button (tap)="ngIfDefault()">点击控制显示/隐藏</button>
+<p>非语法糖ngIf显示测试</p>
+<button (tap)="ngIfDefault()">点击控制显示/隐藏</button>
 <ng-template [ngIf]="flag.ifDefault" [ngIfElse]="ngIfDefaultElseTemplate"
   >模板上默认if为显示</ng-template
 >
 <ng-template #ngIfDefaultElseTemplate>
   <div>模板上else时显示</div>
-</ng-template> -->
+</ng-template>
 <div>------------------------</div>
 <div>ngfor测试</div>
 <button (tap)="addList()">增加列表</button>
