chore: library支持scope-template

--- a/test/hello-world-app/src/__pages/component-use-template/component-use-template.component.html
+++ b/test/hello-world-app/src/__pages/component-use-template/component-use-template.component.html
@@ -6,3 +6,5 @@
 <app-outside-template
   [template]="$$mp$$TestLibrary$$first"
 ></app-outside-template>
+<div>下面的是调用library内组件的其他组件模板</div>
+<app-global-self-template></app-global-self-template>
