--- a/test/hello-world-app/src/__pages/root/root.component.html
+++ b/test/hello-world-app/src/__pages/root/root.component.html
@@ -7,3 +7,4 @@
 <button (tap)="complexStructure()">复杂结构</button>
 <button (tap)="complexPropertyEvent()">复杂属性与事件</button>
 <button (tap)="baseForms()">基础表单</button>
+<button (tap)="componentUseTemplate()">使用模板传入组件</button>
