--- a/test/hello-world-app/src/__pages/base-forms/base-forms.component.html
+++ b/test/hello-world-app/src/__pages/base-forms/base-forms.component.html
@@ -1,1 +1,4 @@
 <input type="text" [(ngModel)]="value" (ngModelChange)="modelChange($event)" />
+<checkbox-group [(ngModel)]="checked" (ngModelChange)="checkboxChange($event)">
+  <checkbox [value]="'1'"></checkbox>
+</checkbox-group>
