--- a/test/hello-world-app/src/__pages/root/root.component.html
+++ b/test/hello-world-app/src/__pages/root/root.component.html
@@ -1,6 +1,7 @@
 <button (tap)="baseTag()">基础tap</button>
 <button (tap)="baseComponent()">基础组件</button>
 <button (tap)="baseDirective()">基础指令</button>
+<button (tap)="baseHttp()">基础请求</button>
 <button (tap)="ngContent()">ng-content</button>
 <button (tap)="defaultStructuralDirective()">默认结构型指令</button>
 <button (tap)="customStructuralDirective()">自定义结构型指令</button>
