test: 应用中使用self模板

--- a/test/hello-world-app/src/__pages/root/root.component.html
+++ b/test/hello-world-app/src/__pages/root/root.component.html
@@ -9,3 +9,4 @@
 <button (tap)="complexPropertyEvent()">复杂属性与事件</button>
 <button (tap)="baseForms()">基础表单</button>
 <button (tap)="componentUseTemplate()">使用模板传入组件</button>
+<button (tap)="selfComponent()">使用self模板</button>
