--- a/test/hello-world-app/src/spec-component/ng-content/ng-content.component.html
+++ b/test/hello-world-app/src/spec-component/ng-content/ng-content.component.html
@@ -1,3 +1,6 @@
 <div class="wrapper-1">
   <ng-content></ng-content>
 </div>
+<div class="wrapper-2">
+  <ng-content select="[slot='empty']"></ng-content>
+</div>
