--- a/test/hello-world-app/src/__components/component-need-template/component-need-template.component.html
+++ b/test/hello-world-app/src/__components/component-need-template/component-need-template.component.html
@@ -1,2 +1,4 @@
+ngTemplateOutlet插入
 <ng-container *ngTemplateOutlet="templateRef"></ng-container>
+ngIf 插入
 <div *ngIf="templateRef; then templateRef"></div>
