--- a/test/hello-world-app/src/__pages/root/root.component.html
+++ b/test/hello-world-app/src/__pages/root/root.component.html
@@ -10,3 +10,5 @@
 <button (tap)="baseForms()">基础表单</button>
 <button (tap)="componentUseTemplate()">使用模板传入组件</button>
 <button (tap)="selfComponent()">使用self模板</button>
+<button (tap)="lifeTime()">生命周期</button>
+<button (tap)="lifeTimeUseComponent()">生命周期-useComponent</button>
